add option to use collabora server

--- a/Audio-Transcription-Firefox/manifest.json
+++ b/Audio-Transcription-Firefox/manifest.json
@@ -4,6 +4,7 @@
     "version": "1.0",
     "description": "Transcribe audio from any webpage.",
     "permissions": [
+      "storage",
       "activeTab",
       "<all_urls>"
     ],
