--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,40 +11,43 @@ on:
       - main
 
 jobs:
-  build-and-push-package:
+  build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, '3.10', 3.11]
     steps:
-    - name: Check Out Repository
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
-    
+        python-version: ${{ matrix.python-version }}
+
     - name: Set up FFmpeg
       uses: FedericoCarboni/setup-ffmpeg@v2
     
     - name: Install Additional requirements
       run: |
         sudo apt-get -y install portaudio19-dev wget
-      shell: bash
-
-    - name: Install Client Requirements
-      run: pip install -r requirements/client.txt
-
-    - name: Install Server Requirements
-      run: pip install -r requirements/server.txt
-
-    - name: Install Wheel for build 
-      run: pip install wheel twine
     
-    - name: Build wheel
+    - name: Install Client and Server Requirements
       run: |
+        pip install -r requirements/client.txt
+        pip install -r requirements/server.txt
+
+    - name: Run Tests
+      run: |
+        # Add commands to run your tests here
+        echo "Running tests against Python ${{ matrix.python-version }}"
+
+    - name: Build wheel
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      run: |
+        pip install wheel twine
         python setup.py sdist bdist_wheel
     
-    - name: Push package on Test PyPI
+    - name: Push package on PyPI
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
