--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -1,45 +1,24 @@
-FROM ubuntu:focal
+FROM python:3.8-slim-buster
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-# Remove any third-party apt sources to avoid issues with expiring keys.
-RUN rm -f /etc/apt/sources.list.d/*.list
-
-# Install some basic utilities.
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     ca-certificates \
     sudo \
     git \
     bzip2 \
     libx11-6 \
+ && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
-RUN apt update
-
-# install python
-RUN apt install software-properties-common -y && \
-    add-apt-repository ppa:deadsnakes/ppa && \
-    apt update
-
-RUN apt install python3-dev -y && \
-    apt install python-is-python3
-    
-
-# install pip
-RUN apt install python3-pip -y
-
-# Create a working directory.
-RUN mkdir /app
 WORKDIR /app
 
-COPY scripts/setup.sh /app
-COPY requirements/ /app
+COPY scripts/setup.sh requirements/server.txt /app/
 
-RUN bash setup.sh
-RUN pip install -r server.txt
+RUN apt update && bash setup.sh && pip install -r server.txt
 
 COPY whisper_live /app/whisper_live
-
 COPY run_server.py /app
+
 CMD ["python", "run_server.py"]
