--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -21,7 +21,7 @@ RUN pip install --no-cache-dir -r server.txt && rm server.txt
 ENV LD_LIBRARY_PATH="/usr/local/lib/python3.10/site-packages/nvidia/cublas/lib:/usr/local/lib/python3.10/site-packages/nvidia/cudnn/lib"
 
 # Копирование всего проекта
-COPY . /workspace
+COPY .. /workspace
 
 # Работаем в каталоге с проектом
 WORKDIR /workspace
